Modified dataset position

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [config]
 ; yolo yolo2
 model = yolo2
-basedir = ~/Documents/Database/yolo-tf
+basedir = ~/scratch/Documents/Database/yolo-tf
 
 [queue]
 capacity = 320
@@ -9,7 +9,7 @@ min_after_dequeue=160
 
 [cache]
 names = config/names/80
-datasets = config/cache/coco.tsv:config/cache/voc.tsv
+datasets = config/cache/voc.tsv
 
 [data_augmentation_full]
 enable = 1
